# fatality-source-code

./: .build-tools.cson  .gitignore  CMakeLists.txt  README.md  internal_hvh.sln
internal_hvh/: CMakeLists.txt  DLLMain.cpp  cthash.h  include_cheat.h  includes.h  internal_hvh.vcxproj.filters  josefin_sans.h  jost.h  md5.cpp  md5.h  space_texture.h  threadsafe_deque.h  weaponicons.h
internal_hvh/features/: aimbot.cpp  aimbot.h  aimbot_helpers.cpp  aimbot_helpers.h  animations.cpp  animations.h  antiaim.cpp  antiaim.h  autostrafer.cpp  autostrafer.h  beams.cpp  beams.h  bone_setup.cpp  bone_setup.h  chams.cpp  chams.h  console_log.cpp  console_log.h  entity_rendering.cpp  entity_rendering.h  flashlight.cpp  flashlight.h  freestanding.cpp  freestanding.h  gamemovement.h  glow.cpp  glow.h  grenade_pred.cpp  grenade_pred.h  hitmarker.cpp  hitmarker.h  hitscan.cpp  hitscan.h  include_features.h  inventorychanger.cpp  inventorychanger.h  knifebot.cpp  knifebot.h  lag_compensation.cpp  lag_compensation.h  (+29 more)
internal_hvh/hooks/: con_vars.cpp  create_move.cpp  do_post_screen_space_effects.cpp  draw_model_execute.cpp  emit_sound.cpp  estimate_abs_velocity.cpp  find_material.cpp  frame_stage_notify.cpp  hooks.h  is_box_visible.cpp  is_connected.cpp  level_init_post_entity.cpp  level_shutdown.cpp  lua.cpp  misc.cpp  net_props.cpp  override_view.cpp  packet_start.cpp  paint_traverse.cpp  physics_simulate.cpp  player.cpp  present.cpp  process_input.cpp  render_view.cpp  reset.cpp  run_command.cpp  scene_end.cpp  sequence.cpp  setup_bones_calls.cpp  wnd_proc.cpp
internal_hvh/lua_new/compile/src/: buildvm.exp  buildvm.lib  lua51.exp  lua51.lib  luajit.exp  luajit.lib  minilua.exp  minilua.lib  msvcbuild.bat
internal_hvh/lua_new/lua/: api_def.h  engine.cpp  engine.h  helpers.cpp  helpers.h  runtime_state.cpp  script.cpp  state.cpp  state.h
internal_hvh/lua_new/lua/api/: cfg.cpp  cvar.cpp  database.cpp  engine.cpp  entity.cpp  event.cpp  fs.cpp  globals.cpp  gui.cpp  input.cpp  mat.cpp  math.cpp  panorama.cpp  render.cpp  timer.cpp  user_cmd.cpp  utils.cpp  zip.cpp
internal_hvh/menu/: effects.cpp  effects.h  menu.cpp  menu.h  menu_include.h
internal_hvh/menu/elements/: alpha_slider.cpp  alpha_slider.h  button.cpp  button.h  checkbox.cpp  checkbox.h  child.cpp  child.h  combobox.cpp  combobox.h  control.cpp  control.h  glitch_text.cpp  glitch_text.h  hue_slider.cpp  hue_slider.h  listbox.cpp  listbox.h  pad.h  slider.cpp  slider.h  sub_tab.cpp  sub_tab.h  tab.cpp  tab.h  text_box.cpp  text_box.h  weapon_tab.cpp  weapon_tab.h  window.cpp  window.h
internal_hvh/menu/elements/sub_controls/: color_picker.cpp  color_picker.h  key_bind.cpp  key_bind.h  sub_control.h
internal_hvh/misc/: StackTracer.cpp  StackTracer.h  WinReg.hpp  aes256.cpp  aes256.h  config.cpp  config.h  crc.h  d3dfont.cpp  d3dfont.h  datamap.h  defs.h  dx_adapter.cpp  dx_adapter.h  globals.cpp  globals.h  hitsounds.h  hooks.cpp  hybrid_hook.h  init.cpp  init.h  input.cpp  input.h  intersection.h  intrinsics.h  ipc.h  listeners.cpp  listeners.h  math.cpp  math.h  memory.h  netvars.h  offsets.h  profiler.h  protection.h  render.cpp  render.h  util.cpp  util.h  vm.hpp
internal_hvh/misc/networking/: connector.cpp  connector.h  net_offsets.cpp  net_offsets.h
internal_hvh/misc/networking/include/: data.h  session.h
internal_hvh/misc/networking/src/: session.cpp
internal_hvh/misc/networking/src/crypto/: helpers.cpp  helpers.h  ssl.cpp  ssl.h  ssl_context.cpp  ssl_context.h
internal_hvh/misc/renderer/include/ren/: adapter.h  adapter_dx11.h  adapter_dx9.h  adapter_gl2.h  adapter_gl3.h  anim.h  bitfont.h  command.h  font.h  layer.h  misc.h  renderer.h  texture.h  types.h  vertex.h
internal_hvh/misc/renderer/src/: adapter_dx11.cpp  adapter_dx9.cpp  adapter_gl2.cpp  adapter_gl3.cpp  bitfont.cpp  command.cpp  font.cpp  layer.cpp  renderer.cpp  texture.cpp
internal_hvh/misc/tsl/: robin_growth_policy.h  robin_hash.h  robin_map.h  robin_set.h
internal_hvh/sdk/: CBoneChache.h  CCSGOPlayerAnimState.h  CCSGameRulesProxy.h  CMergedMDL.h  CNetChannel.h  ClientClass.h  ConVar.h  IClientEntity.h  IMaterial.h  IMaterialVar.h  INetChannelInfo.h  IRefCounted.h  KeyValues.cpp  KeyValues.h  checksum_md5.cpp  checksum_md5.h  defines.h  econ_item.h  entity_classes.cpp  entity_classes.h  include_sdk.h  misc.h  networkstringtable.h  panorama.h  structs.h  trace_ray.cpp  trace_ray.h
internal_hvh/sdk/datatypes/: CUtlVector.h  Color.h  QAngle.h  VMatrix.h  Vector.cpp  Vector.h  Vector2D.h  Vector4D.h  include_datatypes.h  matrix3x3_t.h  matrix3x4_t.h
internal_hvh/sdk/interfaces/: CGlowObjectManager.cpp  CGlowObjectManager.h  CHud.h  CSPlayerResource.h  IBaseClientDll.h  IBaseFileSystem.h  ICVar.h  IClientEntityList.h  IClientModeShared.h  IClientState.h  IEngineClient.h  IEngineTrace.h  IGameEventManager.h  IGlobalVarsBase.h  IInput.h  ILocalize.h  IMatRenderContext.h  IMaterialSystem.h  IMemAlloc.h  IMoveHelper.h  IPhysicsSurfaceProps.h  IPrediction.h  IStudioRender.h  ISurface.h  IToolEntity.h  IVDebugOverlay.h  IVEffects.h  IVModelInfo.h  IVModelRender.h  IVPanel.h  IVRenderView.h  IViewRender.h  IViewRenderBeams.h  IWeaponSystem.h  interfaces.h
